# project-web-cars

./: .editorconfig  .gitignore  README.md  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
apps/cars/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py
apps/cars/templates/cars/pages/: car_delete.html  car_detail.html  car_form.html  car_list.html
apps/cars/templates/cars/partials/: car_card.html
apps/site_setup/: admin.py  apps.py  forms.py  models.py  signals.py
apps/site_setup/migrations/: 0001_initial.py
apps/site_setup/templatetags/: custom_tags.py
apps/static/css/: style.css
apps/templates/admin/: base.html
apps/templates/partials/: head.html  navbar.html  pagination.html
apps/users/: admin.py  forms.py  mixins.py  urls.py  views.py
apps/users/templates/users/pages/: user_dashboard.html  user_login.html  user_register.html
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile  start.sh
config/: urls.py
config/settings/: base.py
core/: urls.py  views.py
core/settings/: base.py  local.py  production.py  test.py
static/js/: scripts.js
templates/admin/: base_site.html
templates/global/: 404.html  base.html
templates/pages/: index.html
templates/partials/: footer.html  header.html  messages.html
utils/: context_processors.py  gemini_tools.py  image_tools.py  statistic_tools.py
