[project]
name = "project-web-cars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "argon2-cffi>=25.1.0",
    "django>=5.2.8",
    "django-environ>=0.12.0",
    "django-redis>=6.0.0",
    "google-genai>=1.48.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg>=3.2.12",
    "redis>=7.0.1",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "ruff>=0.14.7",
    "werkzeug>=3.1.3",
]

[tool.ruff]
preview = true
line-length = 88
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP"]
ignore = ["S101", "RUF012", "SIM102",]

[tool.ruff.lint.isort]
